--- a/needhelp.html
+++ b/needhelp.html
@@ -4,7 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>M.A.C</title>
-    <link rel="stylesheet" href="css/needhelp.css">
+<style>
+      *{
+    padding: 0%;
+    margin: 0%;
+    border: 0;
+}
+body{
+   
+        min-height: 100vh;
+        background-image:linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.7)) ,url(../img/R.backgroung.jpeg);
+         background-repeat: no-repeat;
+         background-size: cover;
+         background-position: center;
+         height: 100vh;
+        
+}
+.title{
+   font-size: 70%;
+    margin-top: 70px;
+    text-align: center;
+    color: rgb(227, 226, 226);
+}
+.title h1{
+    font-size: 70px;
+    font-family: 'Times New Roman', Times, serif;
+}
+.button{
+    text-decoration: none;
+    border:  1px;
+    background-color: rgb(217, 216, 216);
+   padding: 5px 90px;
+    text-align: center;
+    margin-top: 1%;
+    color: rgb(155, 155, 155);
+    font-family: 'Times New Roman', Times, serif;
+}
+
+    </style>  
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/941dcf97d9.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
